Fix overlays z-index

--- a/app/styles/constants/z-index.scss
+++ b/app/styles/constants/z-index.scss
@@ -10,4 +10,5 @@ $z-index-profile-cover: 3999;
 $z-index-profile-cover-editing: 4001;
 
 $zindex-popover: 5000;
-$zindex-tooltip: 6000;
+$zindex-tooltip: 7000;
+$z-index-overlay: 5000;
